--- a/package.json
+++ b/package.json
@@ -170,7 +170,7 @@
     "rollup-plugin-node-resolve": "3.0.0",
     "rollup-stream": "1.24.1",
     "run-sequence": "2.2.0",
-    "rxjs": "5.5.2",
+    "rxjs": "6.2.1",
     "sass-loader": "6.0.6",
     "script-ext-html-webpack-plugin": "1.8.7",
     "sorcery": "0.10.0",
@@ -212,5 +212,8 @@
     "packages": [
       "ngx-tree-select"
     ]
+  },
+  "dependencies": {
+    "rxjs-compat": "^6.2.2"
   }
 }
